// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReasonFound should load ExplainCollectionInterval component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    Monitoring is currently off
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        Monitoring provides insight to your hardware performance and load.
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium"
  >
    <p>
      We checked the cluster settings and found that 
      <code>
        xpack.monitoring.collection.interval
      </code>
       is set to 
      <code>
        -1
      </code>
      .
    </p>
    <p>
      The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
    </p>
    <p>
      Would you like us to change it and enable monitoring?
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l"
  />,
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--fill"
        data-test-subj="enableCollectionInterval"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Turn on monitoring
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExporters component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium eui-textLeft"
  >
    <p>
      We checked the 
      <code>
        node001foo
      </code>
       settings for 
      <code>
        xpack.monitoring.exporters
      </code>
      , and found the reason: 
      <code>
        myMonitoringClusterExporter1
      </code>
      .
    </p>
    <p>
      Using monitoring exporters to ship the monitoring data to a remote monitoring cluster is highly recommended as it keeps the integrity of the monitoring data safe no matter what the state of the production cluster. However, as this instance of Kibana could not find any monitoring data, there seems to be a problem with the 
      <code>
        xpack.monitoring.exporters
      </code>
       configuration, or the 
      <code>
        xpack.monitoring.elasticsearch
      </code>
       settings in 
      <code>
        kibana.yml
      </code>
      .
    </p>
    <p>
      Check that the intended exporters are enabled for sending statistics to the monitoring cluster, and that the monitoring cluster host matches the 
      <code>
        xpack.monitoring.elasticsearch
      </code>
       setting in 
      <code>
        kibana.yml
      </code>
       to see monitoring data in this instance of Kibana.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExportersCloud component 1`] = `
Array [
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        Configure monitoring through 
        <a
          class="euiLink euiLink--primary"
          href="https://cloud.elastic.co/deployments"
          rel="noopener"
          target="_blank"
        >
          Elasticsearch Service Console
          <span
            class="euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
         Go to 
        <a
          class="euiLink euiLink--primary"
          href="https://cloud.elastic.co/deployments"
          rel="noopener"
          target="_blank"
        >
          Logs and metrics
          <span
            class="euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
         section for a deployment to configure monitoring. For more information visit 
        <a
          class="euiLink euiLink--primary"
          href="https://www.elastic.co/guide/en/cloud/current/ec-enable-logging-and-monitoring.html"
          rel="noopener"
          target="_blank"
        >
          the documentation page.
          <span
            class="euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium eui-textLeft"
  >
    <p>
      In Elastic Cloud, your monitoring data is stored in your dedicated monitoring cluster.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainPluginEnabled component 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--large"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
  />,
  <div
    class="euiText euiText--medium"
  >
    <p>
      We checked the node001foo settings and found that 
      <code>
        xpack.monitoring.enabled
      </code>
       is set to 
      <code>
        false
      </code>
       set, which disables monitoring. Removing the 
      <code>
        xpack.monitoring.enabled: false
      </code>
       setting from your configuration will put the default into effect and enable Monitoring.
    </p>
  </div>,
]
`;
